plugins {
  id 'java'
  id 'org.springframework.boot' version '3.5.5'
  id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.imchobo'
version = '0.0.1-SNAPSHOT'
description = 'sayren_back'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
  configureEach {
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
  }
}

repositories {
  mavenCentral()
}

dependencies {
  // === Spring Core ===
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
  implementation 'org.springframework.boot:spring-boot-starter-mail:3.5.5'

  // 암호화 해시
  implementation 'commons-codec:commons-codec:1.19.0'

  // 구글 authenticator
  implementation 'com.warrenstrange:googleauth:1.5.0'

  // 버전 비교용 라이브러리
  implementation 'org.apache.maven:maven-artifact:3.9.9'

  // 유저 접속 정보 파싱 라이브러리
  implementation 'com.github.ua-parser:uap-java:1.6.1'

  // = Logging ===
  implementation 'org.springframework.boot:spring-boot-starter-log4j2'

  // === DB ===
  runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

  // === Lombok ===
  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  testCompileOnly 'org.projectlombok:lombok'
  testAnnotationProcessor 'org.projectlombok:lombok'

  // === MapStruct ===
  implementation 'org.mapstruct:mapstruct:1.6.3'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
  annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

  // === JPA API (Entity 어노테이션 문제 해결) ===
  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
  annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'

  // === Redis ===
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'

  // === JWT ===
  implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

  // === AWS SDK (BOM 방식) ===
  implementation platform("software.amazon.awssdk:bom:2.25.39")
  implementation "software.amazon.awssdk:s3"
  implementation "software.amazon.awssdk:sts"

  // === Test ===
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // ======================================
  implementation 'org.springframework.boot:spring-boot-starter-validation'

  // ==== Mail ========
  implementation 'org.springframework.boot:spring-boot-starter-mail:3.5.5'
}

tasks.named('test') {
  useJUnitPlatform()
}